--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
   <div class="keys">
-    <div data-key="65" class="key">
+    <div data-key="65" class`="key">
       <kbd>A</kbd>
       <span class="sound">clap</span>
     </div>
@@ -59,7 +59,22 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-
+  // listen for a keydown event, run the arrow function
+  // pass the event object as a parameter for the function
+  window.addEventListener('keydown', e => {
+    // initialize audio with the audio element of a matching dataKey
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    // initialize key with the corresponding key element
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+    console.log(key);
+    // if audio does not exist for that dataKey, then exit the function
+    if(!audio) return;
+    // if audio does exist, then reset the play time of the audio 
+    // then play it
+    audio.currentTime = 0;
+    audio.play();
+  });
+  
 </script>
 
 
