--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
   <div class="keys">
-    <div data-key="65" class`="key">
+    <div data-key="65" class="key">
       <kbd>A</kbd>
       <span class="sound">clap</span>
     </div>
@@ -66,14 +66,22 @@
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
     // initialize key with the corresponding key element
     const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
-    console.log(key);
+    //console.log(key);
     // if audio does not exist for that dataKey, then exit the function
     if(!audio) return;
     // if audio does exist, then reset the play time of the audio 
     // then play it
     audio.currentTime = 0;
-    audio.play();
+    audio.play(); 
+    key.classList.add('playing');
   });
+
+  function removeTransition(e) {
+    console.log(e);
+  }
+
+  const keys = document.querySelectorAll('.key');
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition()));
   
 </script>
 
