--- a/index.html
+++ b/index.html
@@ -59,14 +59,13 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  // listen for a keydown event, run the arrow function
+
   // pass the event object as a parameter for the function
-  window.addEventListener('keydown', e => {
+  function playSound(e) {
     // initialize audio with the audio element of a matching dataKey
     const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
     // initialize key with the corresponding key element
     const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
-    //console.log(key);
     // if audio does not exist for that dataKey, then exit the function
     if(!audio) return;
     // if audio does exist, then reset the play time of the audio 
@@ -74,7 +73,7 @@
     audio.currentTime = 0;
     audio.play(); 
     key.classList.add('playing');
-  });
+  };
 
   function removeTransition(e) {
     //console.log(e); SHOW THE LIST OF PROPERTIES THAT WERE TRANSITIONED
@@ -88,6 +87,8 @@
   const keys = document.querySelectorAll('.key');
   keys.forEach(key => key.addEventListener('transitionend', removeTransition));
   
+  //listen for a keydown event, run the playSound function
+  window.addEventListener('keydown', playSound);
 </script>
 
 
